--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
     "test": "vitest",
     "test:watch": "yarn test --watch",
     "typecheck": "tsc",
-    "changeset": "changeset",
-    "bump": "node --experimental-strip-types ./scripts/bump.ts",
-    "release": "node --experimental-strip-types ./scripts/release.ts",
-    "release:pr": "node --experimental-strip-types ./scripts/release-pr.ts"
+    "changeset": "changeset"
   },
   "engines": {
     "node": ">= 20"
