--- a/.github/workflows/audit_package.yml
+++ b/.github/workflows/audit_package.yml
@@ -3,10 +3,6 @@ name: Yarn Audit Fix Run
 on:
   workflow_dispatch:
     inputs:
-      force:
-        description: "Use --force flag for npm audit fix?"
-        required: true
-        type: boolean
       base_branch:
         description: "Specify a base branch"
         required: false
@@ -27,7 +23,7 @@ jobs:
   audit-fix:
     uses: step-security/reusable-workflows/.github/workflows/audit_fix.yml@v1
     with:
-      package_manager: "yarn"
+      package_manager: ${{ inputs.package_manager || 'yarn' }}
       base_branch: ${{ inputs.base_branch || 'main' }}
       script: ${{ inputs.script || 'yarn build' }}
 
