--- a/.github/workflows/audit_package.yml
+++ b/.github/workflows/audit_package.yml
@@ -16,6 +16,11 @@ on:
         required: false
         type: string
         default: "yarn build"
+      node_version:
+        description: "Specify Node.js version"
+        required: false
+        default: "24"
+
   schedule:
     - cron: "0 0 * * 1"
 
@@ -26,6 +31,7 @@ jobs:
       package_manager: ${{ inputs.package_manager || 'yarn' }}
       base_branch: ${{ inputs.base_branch || 'main' }}
       script: ${{ inputs.script || 'yarn build' }}
+      node_version: ${{ inputs.node_version || '24' }}
 
 permissions:
   contents: write
